Finalizado soporte con Docker

--- a/webapp/src/pages/index.astro
+++ b/webapp/src/pages/index.astro
@@ -57,7 +57,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor i
 	<ProgressBar hidden state="-" progress={0.0} id="phase-progressbar"/>
 
 	<Horizontal>
-		<TextBox placeholder="Escribe aquí la URL de la noticia" id="url-textbox" value="mock"/>
+		<TextBox placeholder="Escribe aquí la URL de la noticia" id="url-textbox" value=""/>
 		<Button value="Buscar" id="search-button"/>
 	</Horizontal>
 
